enum AccessibilityIdentifiers {
    
    static let mapView = "mapView"
    static let searchButton = "searchButton"
    static let clearButton = "clearButton"
    static let refreshButton = "refreshButton"
    static let originSearchField = "originSearchField"
    static let destinationSearchField = "destinationSearchField"
    static let dropDownListView = "dropDownListView"
    static let cityRow = "cityRow"
    static let tripOverviewView = "tripOverviewView"
    static let alertView = "alertView"
    static let bottomScrollView = "bottomScrollView"
}
