
// MARK: - Network Error

"networkErrorBadRequest" = "The server could not understand the request.";
"networkErrorUnauthorized" = "Access denied.";
"networkErrorNotFound" = "The resource you're looking for can't be found.";
"networkError500GenericMessage" = "Oops!\nSomething went wrong on our end.";
"networkError300GenericMessage" = "Multiple options available.\nRefine your request.";
"networkErrorUnknown" = "Oops!\nSomething went wrong.";
"networkErrorNoData" = "No data available.";

// MARK: - App Error

"appErrorNoPathsAvailable" = "There are no flights available.";
"appErrorOriginMissing" = "You must provide the city of origin.";
"appErrorDestinationMissing" = "You must provide destination.";
"appErrorPathMissing" = "You must provide the trip origin and destination.";
"appErrorSameCityInBothFields" = "Please select different cities.";

// MARK: - Buttons

"buttonOk" = "Ok";
"buttonSearch" = "Search";
"buttonClear" = "Clear";
"buttonRefresh" = "Refresh";

//MARK: - Views

"mainViewTitle" = "Trip Planner";
"searchCityTextViewPlaceholder" = "Choose city";
"bestDeal" = "⭐️ Best deal";
"stopOvers" = "Stop Overs";


